--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 				<artifactId>mockito-core</artifactId>
 				<version>1.8.5</version>
 			</dependency>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>1.0.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<modules>
