--- a/drools-framework-runtime-base/pom.xml
+++ b/drools-framework-runtime-base/pom.xml
@@ -41,6 +41,12 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 		</dependency>
+                <dependency>
+			<groupId>org.chtijbug.drools</groupId>
+			<artifactId>drools-framework-runtime-entity</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                            
+		</dependency>
 	</dependencies>
 
 </project>
