--- a/drools-framework-runtime-entity/.classpath
+++ b/drools-framework-runtime-entity/.classpath
@@ -10,5 +10,6 @@
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
