--- a/pom.xml
+++ b/pom.xml
@@ -1,112 +1,116 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.chtijbug.drools</groupId>
-	<artifactId>drools-framework-parent</artifactId>
-	<name>drools framework parent</name>
-	<version>1.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
+    <groupId>org.chtijbug.drools</groupId>
+    <artifactId>drools-framework-parent</artifactId>
+    <name>drools framework parent</name>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<drools.version>5.3.0.Final</drools.version>
-	</properties>
+    <properties>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<drools.version>5.3.0.Final</drools.version>
+    </properties>
 
-	<scm>
-		<connection>scm:git:git@github.com:chtiJBUG/drools-framework.git
-        </connection>
-		<url>scm:git:git@github.com:chtiJBUG/drools-framework.git</url>
-		<developerConnection>scm:git:git@github.com:chtiJBUG/drools-framework.git
-        </developerConnection>
-	</scm>
+    <scm>
+	<connection>scm:git:git@github.com:chtiJBUG/drools-framework.git
+	</connection>
+	<url>scm:git:git@github.com:chtiJBUG/drools-framework.git</url>
+	<developerConnection>scm:git:git@github.com:chtiJBUG/drools-framework.git
+	</developerConnection>
+    </scm>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
+    <build>
+	<plugins>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<version>2.3.2</version>
+		<configuration>
+		    <source>1.6</source>
+		    <target>1.6</target>
+		</configuration>
+	    </plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.2.1</version>
-			</plugin>
-		</plugins>
-	</build>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-release-plugin</artifactId>
+		<version>2.2.1</version>
+	    </plugin>
+	</plugins>
+    </build>
 
 
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.drools</groupId>
-				<artifactId>drools-core</artifactId>
-				<version>${drools.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.drools</groupId>
-				<artifactId>drools-compiler</artifactId>
-				<version>${drools.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.drools</groupId>
-				<artifactId>knowledge-api</artifactId>
-				<version>${drools.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.10</version>
-			</dependency>
-			<dependency>
-				<groupId>org.mockito</groupId>
-				<artifactId>mockito-core</artifactId>
-				<version>1.8.5</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jdt.core.compiler</groupId>
-				<artifactId>ecj</artifactId>
-				<version>3.5.1</version>
-			</dependency>
-			<dependency>
-				<groupId>org.jbpm</groupId>
-				<artifactId>jbpm-bpmn2</artifactId>
-				<version>5.1.2.Final</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>1.6.4</version>
-			</dependency>
-			<dependency>
-				<groupId>ch.qos.logback</groupId>
-				<artifactId>logback-classic</artifactId>
-				<version>1.0.0</version>
-			</dependency>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.10</version>
-			</dependency>
-			<dependency>
-				<groupId>org.mockito</groupId>
-				<artifactId>mockito-all</artifactId>
-				<version>1.9.0-rc1</version>
-			</dependency>
-
-		</dependencies>
-	</dependencyManagement>
-	<modules>
-		<module>drools-framework-runtime-base</module>
-		<module>drools-framework-runtime-entity</module>
-		<module>drools-framework-runtime-supervision</module>
-	</modules>
+    <dependencyManagement>
+	<dependencies>
+	    <dependency>
+		<groupId>org.drools</groupId>
+		<artifactId>drools-core</artifactId>
+		<version>${drools.version}</version>
+	    </dependency>
+	    <dependency>
+		<groupId>org.drools</groupId>
+		<artifactId>drools-compiler</artifactId>
+		<version>${drools.version}</version>
+	    </dependency>
+	    <dependency>
+		<groupId>org.drools</groupId>
+		<artifactId>knowledge-api</artifactId>
+		<version>${drools.version}</version>
+	    </dependency>
+	    <dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.10</version>
+	    </dependency>
+	    <dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-core</artifactId>
+		<version>1.8.5</version>
+	    </dependency>
+	    <dependency>
+		<groupId>org.eclipse.jdt.core.compiler</groupId>
+		<artifactId>ecj</artifactId>
+		<version>3.5.1</version>
+	    </dependency>
+	    <dependency>
+		<groupId>org.jbpm</groupId>
+		<artifactId>jbpm-bpmn2</artifactId>
+		<version>5.1.2.Final</version>
+	    </dependency>
+	    <dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>1.6.4</version>
+	    </dependency>
+	    <dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>1.0.0</version>
+	    </dependency>
+	    <dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.10</version>
+	    </dependency>
+	    <dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-all</artifactId>
+		<version>1.9.0-rc1</version>
+	    </dependency>
+	    <dependency>
+		<groupId>org.codehaus.jettison</groupId>
+		<artifactId>jettison</artifactId>
+		<version>1.3</version>
+	    </dependency>
+	</dependencies>
+    </dependencyManagement>
+    <modules>
+	<module>drools-framework-runtime-base</module>
+	<module>drools-framework-runtime-entity</module>
+	<module>drools-framework-runtime-supervision</module>
+    </modules>
 </project>
