--- a/drools-framework-runtime-supervision/pom.xml
+++ b/drools-framework-runtime-supervision/pom.xml
@@ -46,6 +46,7 @@
 	    <artifactId>tools</artifactId>
 	    <version>1.6.0_11</version>
 	    <type>jar</type>
+	    <scope>provided</scope>
 	</dependency>
 	<dependency>
 	    <groupId>org.codehaus.jettison</groupId>
