--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.chtijbug.drools</groupId>
   <artifactId>drools-framework-parent</artifactId>
   <name>drools framework parent</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0-RELEASE</version>
   <packaging>pom</packaging>
 
   <properties>
@@ -113,15 +113,15 @@
   </modules>
 
   <distributionManagement>
-       <repository>
-          <id>chtijbug-release</id>
-          <name>chtijbug repo release</name>
-          <url>http://openesb-dev.org:8081/nexus/content/repositories/chtijbug-release/</url>
-        </repository>
-         <snapshotRepository>
-          <id>chtijbug-snapshot</id>
-          <name>chtijbug repo release</name>
-          <url>http://nexus.openesb-dev.org:8081/nexus/content/repositories/chtijbug-snapshot/</url>
-        </snapshotRepository>
-    </distributionManagement>
+    <repository>
+      <id>chtijbug-release</id>
+      <name>chtijbug repo release</name>
+      <url>http://openesb-dev.org:8081/nexus/content/repositories/chtijbug-release/</url>
+    </repository>
+    <snapshotRepository>
+      <id>chtijbug-snapshot</id>
+      <name>chtijbug repo release</name>
+      <url>http://nexus.openesb-dev.org:8081/nexus/content/repositories/chtijbug-snapshot/</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
