--- a/drools-framework-runtime-base/pom.xml
+++ b/drools-framework-runtime-base/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.chtijbug.drools</groupId>
     <artifactId>drools-framework-parent</artifactId>
-    <version>1.0-RELEASE</version>
+    <version>1.0.X-SNAPSHOT</version>
   </parent>
 
 
