--- a/drools-framework-runtime-supervision/pom.xml
+++ b/drools-framework-runtime-supervision/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>drools-framework-parent</artifactId>
     <groupId>org.chtijbug.drools</groupId>
-    <version>1.0-RELEASE</version>
+    <version>1.0.X-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
   <artifactId>drools-framework-runtime-supervision</artifactId>
