--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   <groupId>org.chtijbug.drools</groupId>
   <artifactId>drools-framework-parent</artifactId>
   <name>drools framework parent</name>
-  <version>1.0-RELEASE</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <drools.version>5.3.0.Final</drools.version>
+    <drools.version>5.4.0-SNAPSHOT</drools.version>
   </properties>
 
   <scm>
