--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <drools.version>5.4.0-SNAPSHOT</drools.version>
+    <drools.version>5.4.0.CR1</drools.version>
   </properties>
 
   <scm>
@@ -130,6 +130,11 @@
       <id>jboss-Snapshot</id>
       <name>jboss-Snapshot</name>
       <url>https://repository.jboss.org/nexus/content/repositories/snapshots//</url>
+    </repository>
+    <repository>
+      <id>jboss-release</id>
+      <name>jboss-release</name>
+      <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
     </repository>
   </repositories>
   <distributionManagement>
