--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
         <version>${drools.version}</version>
       </dependency>
       <dependency>
+    			<groupId>org.drools</groupId>
+    			<artifactId>droolsjbpm-ide-common</artifactId>
+    			<version>${drools.version}</version>
+    		</dependency>
+      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.10</version>
@@ -116,12 +121,20 @@
         <artifactId>jettison</artifactId>
         <version>1.3</version>
       </dependency>
+      <dependency>
+      <groupId>org.apache.cxf</groupId>
+   			<artifactId>cxf-bundle-jaxrs</artifactId>
+   			<version>2.3.0</version>
+   		</dependency>
     </dependencies>
+
   </dependencyManagement>
   <modules>
     <module>drools-framework-runtime-base</module>
     <module>drools-framework-runtime-entity</module>
     <module>drools-framework-runtime-supervision</module>
+    <module>drools-framework-rest-guvnor</module>
+
   </modules>
 
 
