--- a/drools-framework-rest-guvnor/pom.xml
+++ b/drools-framework-rest-guvnor/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>drools-framework-parent</artifactId>
     <groupId>org.chtijbug.drools</groupId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1.0.2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
