--- a/drools-framework-runtime-supervision/pom.xml
+++ b/drools-framework-runtime-supervision/pom.xml
@@ -4,8 +4,7 @@
   <parent>
     <artifactId>drools-framework-parent</artifactId>
     <groupId>org.chtijbug.drools</groupId>
-    <version>1.1-SNAPSHOT</version>
-    <relativePath>..</relativePath>
+    <version>1.1.0.2</version>
   </parent>
   <artifactId>drools-framework-runtime-supervision</artifactId>
   <name>runtime supervision project</name>
@@ -34,7 +33,7 @@
     <dependency>
       <groupId>org.chtijbug.drools</groupId>
       <artifactId>drools-framework-runtime-entity</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${chtijbug.droolslib.version}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
