--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,14 @@
   <groupId>org.chtijbug.drools</groupId>
   <artifactId>drools-framework-parent</artifactId>
   <name>drools framework parent</name>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1.0.2</version>
   <packaging>pom</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <drools.version>5.4.0.Final</drools.version>
+    <drools.version>5.4.1.chtijbug</drools.version>
+    <jbpm.version>5.3.1.chtijbug</jbpm.version>
+    <chtijbug.droolslib.version>1.1.0.2</chtijbug.droolslib.version>
   </properties>
 
   <scm>
@@ -94,7 +96,7 @@
       <dependency>
         <groupId>org.jbpm</groupId>
         <artifactId>jbpm-bpmn2</artifactId>
-        <version>5.1.2.Final</version>
+        <version>${jbpm.version}</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
@@ -149,7 +151,18 @@
       <name>jboss-release</name>
       <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
     </repository>
+    <repository>
+          <id>chtijbug-release</id>
+          <name>chtijbug repo release</name>
+          <url>http://openesb-dev.org:8081/nexus/content/repositories/chtijbug-release/</url>
+        </repository>
+        <repository>
+          <id>chtijbug-snapshot</id>
+          <name>chtijbug repo release</name>
+          <url>http://nexus.openesb-dev.org:8081/nexus/content/repositories/chtijbug-snapshot/</url>
+        </repository>
   </repositories>
+
   <distributionManagement>
     <repository>
       <id>chtijbug-release</id>
