--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
   <groupId>org.chtijbug.drools</groupId>
   <artifactId>drools-framework-parent</artifactId>
   <name>drools framework parent</name>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1.0.3</version>
   <packaging>pom</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <drools.version>5.4.1.chtijbug</drools.version>
     <jbpm.version>5.3.1.chtijbug</jbpm.version>
-    <chtijbug.droolslib.version>1.1-SNAPSHOT</chtijbug.droolslib.version>
+    <chtijbug.droolslib.version>1.1.0.3</chtijbug.droolslib.version>
   </properties>
 
   <scm>
