--- a/pom.xml
+++ b/pom.xml
@@ -1,178 +1,208 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.chtijbug.drools</groupId>
+    <artifactId>drools-framework-parent</artifactId>
+    <name>drools framework parent</name>
+    <version>1.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-  <groupId>org.chtijbug.drools</groupId>
-  <artifactId>drools-framework-parent</artifactId>
-  <name>drools framework parent</name>
-  <version>1.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <drools.version>5.4.1.chtijbug</drools.version>
+        <jbpm.version>5.3.1.chtijbug</jbpm.version>
+        <chtijbug.droolslib.version>1.1-SNAPSHOT</chtijbug.droolslib.version>
+    </properties>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <drools.version>5.4.1.chtijbug</drools.version>
-    <jbpm.version>5.3.1.chtijbug</jbpm.version>
-    <chtijbug.droolslib.version>1.1-SNAPSHOT</chtijbug.droolslib.version>
-  </properties>
-
-  <scm>
-    <connection>scm:git:git@github.com:chtiJBUG/drools-framework.git
-    </connection>
-    <url>scm:git:git@github.com:chtiJBUG/drools-framework.git</url>
-    <developerConnection>scm:git:git@github.com:chtiJBUG/drools-framework.git
-    </developerConnection>
-  </scm>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.2.1</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+    <scm>
+        <connection>scm:git:git@github.com:chtiJBUG/drools-framework.git</connection>
+        <url>scm:git:git@github.com:chtiJBUG/drools-framework.git</url>
+        <developerConnection>scm:git:git@github.com:chtiJBUG/drools-framework.git</developerConnection>
+    </scm>
+    <issueManagement>
+        <system>Jira</system>
+        <url>https://chtijbug.atlassian.net/</url>
+    </issueManagement>
 
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.drools</groupId>
-        <artifactId>drools-core</artifactId>
-        <version>${drools.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.drools</groupId>
-        <artifactId>drools-compiler</artifactId>
-        <version>${drools.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.drools</groupId>
-        <artifactId>knowledge-api</artifactId>
-        <version>${drools.version}</version>
-      </dependency>
-      <dependency>
-    			<groupId>org.drools</groupId>
-    			<artifactId>droolsjbpm-ide-common</artifactId>
-    			<version>${drools.version}</version>
-    		</dependency>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.10</version>
-      </dependency>
-      <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-core</artifactId>
-        <version>1.8.5</version>
-      </dependency>
-      <dependency>
-        <groupId>org.eclipse.jdt.core.compiler</groupId>
-        <artifactId>ecj</artifactId>
-        <version>3.5.1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jbpm</groupId>
-        <artifactId>jbpm-bpmn2</artifactId>
-        <version>${jbpm.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.6.4</version>
-      </dependency>
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>1.0.0</version>
-      </dependency>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.10</version>
-      </dependency>
-      <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-all</artifactId>
-        <version>1.9.0-rc1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.jettison</groupId>
-        <artifactId>jettison</artifactId>
-        <version>1.3</version>
-      </dependency>
-      <dependency>
-      <groupId>org.apache.cxf</groupId>
-   			<artifactId>cxf-bundle-jaxrs</artifactId>
-   			<version>2.3.0</version>
-   		</dependency>
-    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
 
-  </dependencyManagement>
-  <modules>
-    <module>drools-framework-runtime-base</module>
-    <module>drools-framework-runtime-entity</module>
-    <module>drools-framework-runtime-supervision</module>
-    <module>drools-framework-rest-guvnor</module>
-
-  </modules>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.2.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 
-  <repositories>
-    <repository>
-      <id>jboss-Snapshot</id>
-      <name>jboss-Snapshot</name>
-      <url>https://repository.jboss.org/nexus/content/repositories/snapshots//</url>
-    </repository>
-    <repository>
-      <id>jboss-release</id>
-      <name>jboss-release</name>
-      <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
-    </repository>
-    <repository>
-          <id>chtijbug-release</id>
-          <name>chtijbug repo release</name>
-          <url>http://openesb-dev.org:8081/nexus/content/repositories/chtijbug-release/</url>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.chtijbug.drools</groupId>
+                <artifactId>drools-framework-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.chtijbug.drools</groupId>
+                <artifactId>drools-framework-rest-guvnor</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.chtijbug.drools</groupId>
+                <artifactId>drools-framework-runtime-base</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.chtijbug.drools</groupId>
+                <artifactId>drools-framework-runtime-entity</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.chtijbug.drools</groupId>
+                <artifactId>drools-framework-runtime-supervision</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>org.drools</groupId>
+                <artifactId>drools-core</artifactId>
+                <version>${drools.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.drools</groupId>
+                <artifactId>drools-compiler</artifactId>
+                <version>${drools.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.drools</groupId>
+                <artifactId>knowledge-api</artifactId>
+                <version>${drools.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.drools</groupId>
+                <artifactId>droolsjbpm-ide-common</artifactId>
+                <version>${drools.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.10</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>1.8.5</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jdt.core.compiler</groupId>
+                <artifactId>ecj</artifactId>
+                <version>3.5.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jbpm</groupId>
+                <artifactId>jbpm-bpmn2</artifactId>
+                <version>${jbpm.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.6.4</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.10</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <version>1.9.0-rc1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.jettison</groupId>
+                <artifactId>jettison</artifactId>
+                <version>1.3</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-bundle-jaxrs</artifactId>
+                <version>2.3.0</version>
+            </dependency>
+        </dependencies>
+
+    </dependencyManagement>
+    <modules>
+        <module>drools-framework-common</module>
+        <module>drools-framework-runtime-base</module>
+        <module>drools-framework-runtime-entity</module>
+        <module>drools-framework-runtime-supervision</module>
+        <module>drools-framework-rest-guvnor</module>
+
+    </modules>
+
+
+    <repositories>
+        <repository>
+            <id>jboss-Snapshot</id>
+            <name>jboss-Snapshot</name>
+            <url>https://repository.jboss.org/nexus/content/repositories/snapshots//</url>
         </repository>
         <repository>
-          <id>chtijbug-snapshot</id>
-          <name>chtijbug repo release</name>
-          <url>http://nexus.openesb-dev.org:8081/nexus/content/repositories/chtijbug-snapshot/</url>
+            <id>jboss-release</id>
+            <name>jboss-release</name>
+            <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
         </repository>
-  </repositories>
+        <repository>
+            <id>chtijbug-release</id>
+            <name>chtijbug repo release</name>
+            <url>http://openesb-dev.org:8081/nexus/content/repositories/chtijbug-release/</url>
+        </repository>
+        <repository>
+            <id>chtijbug-snapshot</id>
+            <name>chtijbug repo release</name>
+            <url>http://nexus.openesb-dev.org:8081/nexus/content/repositories/chtijbug-snapshot/</url>
+        </repository>
+    </repositories>
 
-  <distributionManagement>
-    <repository>
-      <id>chtijbug-release</id>
-      <name>chtijbug repo release</name>
-      <url>http://openesb-dev.org:8081/nexus/content/repositories/chtijbug-release/</url>
-    </repository>
-    <snapshotRepository>
-      <id>chtijbug-snapshot</id>
-      <name>chtijbug repo release</name>
-      <url>http://nexus.openesb-dev.org:8081/nexus/content/repositories/chtijbug-snapshot/</url>
-    </snapshotRepository>
-  </distributionManagement>
+    <distributionManagement>
+        <repository>
+            <id>chtijbug-release</id>
+            <name>chtijbug repo release</name>
+            <url>http://openesb-dev.org:8081/nexus/content/repositories/chtijbug-release/</url>
+        </repository>
+        <snapshotRepository>
+            <id>chtijbug-snapshot</id>
+            <name>chtijbug repo release</name>
+            <url>http://nexus.openesb-dev.org:8081/nexus/content/repositories/chtijbug-snapshot/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
