--- a/maven-guvnor-install-pojo-plugin/pom.xml
+++ b/maven-guvnor-install-pojo-plugin/pom.xml
@@ -14,6 +14,9 @@
     <version>1.1.0.11-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
+    <properties>
+        <aether.version>1.13.1</aether.version>
+    </properties>
 
     <name>ChtiJBug Maven plugin for installing the pojo model available at guvnor instance</name>
 
@@ -32,6 +35,34 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.sonatype.aether</groupId>
+            <artifactId>aether-api</artifactId>
+            <version>${aether.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sonatype.aether</groupId>
+            <artifactId>aether-util</artifactId>
+            <version>${aether.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sonatype.aether</groupId>
+            <artifactId>aether-impl</artifactId>
+            <version>${aether.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sonatype.aether</groupId>
+            <artifactId>aether-connector-file</artifactId>
+            <version>${aether.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-aether-provider</artifactId>
+            <version>3.0.4</version>
+        </dependency>
+
     </dependencies>
 
 
