--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,11 @@
                 <version>${drools.version}</version>
             </dependency>
             <dependency>
+                 <groupId>org.drools</groupId>
+                 <artifactId>guvnor-jaxb-entities</artifactId>
+                 <version>${drools.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.drools</groupId>
                 <artifactId>drools-compiler</artifactId>
                 <version>${drools.version}</version>
