Add DrlRessourceFile in KnowledgeBaseAddRessourceEvent Add KnowledgeBaseAddRessourceEvent fireEvent

--- a/drools-framework-runtime-base/pom.xml
+++ b/drools-framework-runtime-base/pom.xml
@@ -108,6 +108,11 @@
             <artifactId>powermock-api-mockito</artifactId>
             <scope>test</scope>
         </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>15.0</version>
+      </dependency>
 
 
     </dependencies>
