--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.chtijbug.drools</groupId>
     <artifactId>drools-framework-parent</artifactId>
     <name>drools framework parent</name>
-    <version>1.1.0.17</version>
+    <version>1.1.0.17-1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <parent>
@@ -43,6 +43,7 @@
         <connection>scm:git:git@github.com:chtiJBUG/drools-framework.git</connection>
         <url>scm:git:git@github.com:chtiJBUG/drools-framework.git</url>
         <developerConnection>scm:git:git@github.com:chtiJBUG/drools-framework.git</developerConnection>
+        <tag>1.1.0.17</tag>
     </scm>
     <issueManagement>
         <system>Jira</system>
