tidy up the project

--- a/drools-framework-rest-guvnor/pom.xml
+++ b/drools-framework-rest-guvnor/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>drools-framework-parent</artifactId>
         <groupId>org.chtijbug.drools</groupId>
@@ -49,13 +50,9 @@
             <groupId>org.drools</groupId>
             <artifactId>droolsjbpm-ide-common</artifactId>
         </dependency>
-      <dependency>
-          <groupId>org.drools</groupId>
-          <artifactId>guvnor-jaxb-entities</artifactId>
-      </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
+            <groupId>org.drools</groupId>
+            <artifactId>guvnor-jaxb-entities</artifactId>
         </dependency>
         <dependency>
             <groupId>com.googlecode.lambdaj</groupId>
