Work On persistence

--- a/drools-framework-common/pom.xml
+++ b/drools-framework-common/pom.xml
@@ -11,9 +11,18 @@
     <artifactId>drools-framework-common</artifactId>
 
     <dependencies>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+      </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+          <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.easytesting</groupId>
