Update correct version for droolsjbpm-ide-common

--- a/pom.xml
+++ b/pom.xml
@@ -171,7 +171,7 @@
             <dependency>
                 <groupId>org.drools</groupId>
                 <artifactId>droolsjbpm-ide-common</artifactId>
-                <version>${drools.version}</version>
+                <version>${guvnor.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
@@ -239,8 +239,8 @@
                 <version>1.4.3</version>
             </dependency>
             <dependency>
-                <groupId>com.googlecode.lambdaj</groupId>
-                <artifactId>lambdaj</artifactId>
+                <groupId>org.chtijbug.osgi</groupId>
+                <artifactId>lambdaj.osgi</artifactId>
                 <version>2.3.3</version>
             </dependency>
             <dependency>
