--- a/drools-framework-rest-guvnor/pom.xml
+++ b/drools-framework-rest-guvnor/pom.xml
@@ -12,6 +12,46 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>bundle-manifest</id>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>bundle</goal>
+            </goals>
+          </execution>
+        </executions>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Export-Package>org.chtijbug.drools.guvnor.*</Export-Package>
+            <Private-Package>org.chtijbug.drools.guvnor.*</Private-Package>
+          </instructions>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-dependencies</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/lib</outputDirectory>
+              <overWriteReleases>false</overWriteReleases>
+              <overWriteSnapshots>false</overWriteSnapshots>
+              <overWriteIfNewer>true</overWriteIfNewer>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.8.1</version>
@@ -34,44 +74,8 @@
           </excludes>
         </configuration>
       </plugin>
-      <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-          </archive>
-        </configuration>
-      </plugin>
 
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>bundle-manifest</id>
-            <phase>process-classes</phase>
-            <goals>
-              <goal>manifest</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>wrap-manifest</id>
-            <phase>process-classes</phase>
-            <goals>
-              <goal>wrap</goal>
-            </goals>
-          </execution>
-        </executions>
-        <extensions>true</extensions>
-        <configuration>
-          <instructions>
-            <Export-Package>org.chtijbug.drools.guvnor.rest.*</Export-Package>
-            <Private-Package>org.chtijbug.drools.guvnor.rest.*</Private-Package>
-            <Embed-Dependency>*</Embed-Dependency>
-            <Embed-Transitive>true</Embed-Transitive>
-          </instructions>
-        </configuration>
-      </plugin>
+
     </plugins>
   </build>
 
@@ -93,14 +97,9 @@
       <artifactId>guvnor-jaxb-entities</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.googlecode.lambdaj</groupId>
-      <artifactId>lambdaj</artifactId>
+      <groupId>org.chtijbug.osgi</groupId>
+      <artifactId>lambdaj.osgi</artifactId>
     </dependency>
-    <!--dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi</artifactId>
-      <version>3.8</version>
-    </dependency-->
     <dependency>
       <groupId>de.twentyeleven.skysail</groupId>
       <artifactId>org.apache.poi-osgi</artifactId>
@@ -117,7 +116,6 @@
       <artifactId>abdera-parser</artifactId>
       <version>1.1.3</version>
     </dependency>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
