setting guvnor version to 5.6.2.chtijbug

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <jbpm.version>5.5.0.Final</jbpm.version>
     <powermock.version>1.4.12</powermock.version>
     <jackson.version>2.3.1</jackson.version>
-    <guvnor.version>5.6.1.chtijbug-SNAPSHOT</guvnor.version>
+    <guvnor.version>5.6.2.chtijbug</guvnor.version>
   </properties>
 
   <licenses>
