adding build for tomcat7

--- a/drools-framework-kie-wb-parent/kie-drools-framework-rest/kie-drools-framework-rest-backend/pom.xml
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-rest/kie-drools-framework-rest-backend/pom.xml
@@ -26,7 +26,11 @@
       <artifactId>kie-api</artifactId>
       <version>${kie.wb.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.kie.workbench.services</groupId>
+      <artifactId>kie-wb-common-services-api</artifactId>
+      <version>${kie.wb.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-api</artifactId>
