--- a/drools-framework-kie-wb-parent/kie-drools-framework-rest/kie-drools-framework-rest-backend/pom.xml
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-rest/kie-drools-framework-rest-backend/pom.xml
@@ -59,6 +59,11 @@
     </dependency>
     <dependency>
       <groupId>org.guvnor</groupId>
+      <artifactId>guvnor-structure-api</artifactId>
+      <version>${guvnor.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.guvnor</groupId>
       <artifactId>guvnor-services-api</artifactId>
       <version>${guvnor.version}</version>
     </dependency>
