--- a/drools-framework-kie-wb-parent/kie-drools-framework-rest/pom.xml
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-rest/pom.xml
@@ -26,7 +26,7 @@
   <artifactId>kie-drools-framework-rest</artifactId>
   <packaging>pom</packaging>
 
-  <name>Guvnor - Rest</name>
+  <name>kie-drools-framework - Rest</name>
 
   <modules>
     <module>kie-drools-framework-rest-client</module>
